--- a/tools/simulation/index.html
+++ b/tools/simulation/index.html
@@ -1,5 +1,64 @@
-<html>
+<!DOCTYPE html>
 <head>
+<meta charset="utf-8">
+<style type="text/css">
 
+* {
+  font-family: "Helvetica Neue", Helvetica;
+}
+
+</style>
+<script src="d3.min.js"></script>
+<script src="js/main.js"></script>
 </head>
+<body>
+<pre>
+
+Strategies
+
+http://strategycanvas.org/#/edit/WRWxrobXMh
+
+
+Questions:
+
+  * What is the difference in market size between cash-paying and insurance-paying customers?
+  * What is the average out-of-pocket cost of treatment?
+  * How does average number of sessions affect cash flow?
+
+  What are the concepts? => levers
+
+PARTNER_NETWORK
+KET_ACTIVITIES
+OFFER
+
+MARKET_SIZE
+CUSTOMER_FUNNEL
+
+CONVERSIONS
+RECONVERSIONS
+
+FIXED_COSTS
+VARIABLE_COSTS
+OPERATING_COSTS
+
+    CUSTOMER_ACQUISITION
+    * Paid Ads
+      * Web/TV/Print
+    * Blogs
+    * Social Media
+    * PR
+    * Email
+    * SEO
+    * Event Marketing
+    * direct Sales
+
+
+
+
+    Represent two core concepts for each business model
+
+       * Funnel narrowing by users and revenue in dollars per through lifecyle
+       * Cash Flow at intervals for different models
+</pre>
+</body>
 </html>
