Working on my plot!

--- a/tools/simulation/index.html
+++ b/tools/simulation/index.html
@@ -8,10 +8,14 @@
 }
 
 </style>
-<script src="d3.min.js"></script>
-<script src="js/main.js"></script>
+<script src="js/d3.min.js"></script>
+<script src="js/source.js"></script>
 </head>
 <body>
+  
+<svg id="graph" width="720" height="120">
+</svg>
+
 <pre>
 
 Strategies
@@ -52,13 +56,13 @@ OPERATING_COSTS
     * Event Marketing
     * direct Sales
 
-
-
-
     Represent two core concepts for each business model
 
        * Funnel narrowing by users and revenue in dollars per through lifecyle
        * Cash Flow at intervals for different models
 </pre>
+
+<script src="js/graph.js"></script>
+
 </body>
 </html>
