--- a/tools/simulation/index.html
+++ b/tools/simulation/index.html
@@ -12,8 +12,8 @@
 <script src="js/source.js"></script>
 </head>
 <body>
-  
-<svg id="graph" width="720" height="120">
+
+<svg id="graph" width="100%" height="300">
 </svg>
 
 <pre>
